{
  "version": 4,
  "terraform_version": "1.9.5",
  "serial": 56,
  "lineage": "0add6943-f03f-4136-e498-e79322204e43",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_http_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-08T15:20:18.395-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idata2502-ci-cd/global/firewalls/allow-http-frontend",
            "log_config": [],
            "name": "allow-http-frontend",
            "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
            "priority": 1000,
            "project": "idata2502-ci-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/firewalls/allow-http-frontend",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tomorrow_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2024-11-08T15:20:18.329-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/idata2502-ci-cd/global/firewalls/allow-ssh",
            "log_config": [],
            "name": "allow-ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
            "priority": 1000,
            "project": "idata2502-ci-cd",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/firewalls/allow-ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": [
              "backend",
              "db",
              "frontend"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.tomorrow_network"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "postgresql_db",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/disks/postgresql-db"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-08T15:20:42.966-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/idata2502-ci-cd/zones/europe-north1-a/instances/postgresql-db",
            "instance_id": "1982913981937033765",
            "label_fingerprint": "KJDRe4Fxjao=",
            "labels": {
              "app": "tomorrow",
              "environment": "development"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDAdRvX9IBrkWd12cPAWfoer/x1wyiEUwGi7cbUH0pxTGdc3g4I9EEZ/yw18Uf7dIU6vrOigBWUihOU9rtC15L9Y2CToZE1wcxtB+7Omu2n29Kg4zxdINuKmBK45e982OY/8Dz8gGkyHQDJNqhoPwpChCjzc1C/FS2jVVYrXuLR7RAsp4TFtVsESpkh+Ttw5cYnd7glMJo3ds8wvxzBjg3LWW52DaLG1y3nGgRG7fqH/o2WVLYmonBaG2gEwRsXNjaxV0gF3fHSSK0SB5wCbumxaq7kKA0262IW2eitYcF/nHMjCVjP57Z8rjDz9siOSB71t7Im6+Sy+4y7Tq5ielh34QRtR/vgfjiUjtUZQ1wJrMEZqFGEj041H3oTNSdpTL0OEA8ghLCKQ6ngUPsceetchp03iYKnLn9u7YYvgzA7Eq [...]
            },
            "metadata_fingerprint": "3KXucOXkgx4=",
            "metadata_startup_script": "#!/bin/bash\nset -e\napt-get update || { echo \"Failed to update packages\"; exit 1; }\napt-get install -y docker.io || { echo \"Failed to install Docker\"; exit 1; }\nsystemctl enable docker || { echo \"Failed to enable Docker\"; exit 1; }\nsystemctl start docker || { echo \"Failed to start Docker\"; exit 1; }\nusermod -aG docker debian || { echo \"Failed to add user to Docker group\"; exit 1; }\necho \"Startup script completed successfully\" \u003e\u003e [...]
            "name": "postgresql-db",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.148.69",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
                "network_ip": "10.0.0.3",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/regions/europe-north1/subnetworks/tomorrow-app-subnetwork",
                "subnetwork_project": "idata2502-ci-cd"
              }
            ],
            "project": "idata2502-ci-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/instances/postgresql-db",
            "service_account": [
              {
                "email": "terraform-service-account@idata2502-ci-cd.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "db"
            ],
            "tags_fingerprint": "iLlpKeTIHqY=",
            "terraform_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.tomorrow_network",
            "google_compute_subnetwork.tomorrow_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "spring_backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/disks/spring-backend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-08T15:20:43.068-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/idata2502-ci-cd/zones/europe-north1-a/instances/spring-backend",
            "instance_id": "1724542415995609637",
            "label_fingerprint": "KJDRe4Fxjao=",
            "labels": {
              "app": "tomorrow",
              "environment": "development"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDAdRvX9IBrkWd12cPAWfoer/x1wyiEUwGi7cbUH0pxTGdc3g4I9EEZ/yw18Uf7dIU6vrOigBWUihOU9rtC15L9Y2CToZE1wcxtB+7Omu2n29Kg4zxdINuKmBK45e982OY/8Dz8gGkyHQDJNqhoPwpChCjzc1C/FS2jVVYrXuLR7RAsp4TFtVsESpkh+Ttw5cYnd7glMJo3ds8wvxzBjg3LWW52DaLG1y3nGgRG7fqH/o2WVLYmonBaG2gEwRsXNjaxV0gF3fHSSK0SB5wCbumxaq7kKA0262IW2eitYcF/nHMjCVjP57Z8rjDz9siOSB71t7Im6+Sy+4y7Tq5ielh34QRtR/vgfjiUjtUZQ1wJrMEZqFGEj041H3oTNSdpTL0OEA8ghLCKQ6ngUPsceetchp03iYKnLn9u7YYvgzA7Eq [...]
            },
            "metadata_fingerprint": "3KXucOXkgx4=",
            "metadata_startup_script": "#!/bin/bash\nset -e\napt-get update || { echo \"Failed to update packages\"; exit 1; }\napt-get install -y docker.io || { echo \"Failed to install Docker\"; exit 1; }\nsystemctl enable docker || { echo \"Failed to enable Docker\"; exit 1; }\nsystemctl start docker || { echo \"Failed to start Docker\"; exit 1; }\nusermod -aG docker debian || { echo \"Failed to add user to Docker group\"; exit 1; }\necho \"Startup script completed successfully\" \u003e\u003e [...]
            "name": "spring-backend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "35.228.81.86",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
                "network_ip": "10.0.0.4",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/regions/europe-north1/subnetworks/tomorrow-app-subnetwork",
                "subnetwork_project": "idata2502-ci-cd"
              }
            ],
            "project": "idata2502-ci-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/instances/spring-backend",
            "service_account": [
              {
                "email": "terraform-service-account@idata2502-ci-cd.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "backend"
            ],
            "tags_fingerprint": "lw1rxEJIHXc=",
            "terraform_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.tomorrow_network",
            "google_compute_subnetwork.tomorrow_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "svelte_frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20241009",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/disks/svelte-frontend"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "creation_timestamp": "2024-11-08T15:20:42.165-08:00",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/idata2502-ci-cd/zones/europe-north1-a/instances/svelte-frontend",
            "instance_id": "6743749865068765734",
            "label_fingerprint": "KJDRe4Fxjao=",
            "labels": {
              "app": "tomorrow",
              "environment": "development"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "debian:ssh-rsa AAAAB3NzaC1yc2EAAAADAQABAAACAQDAdRvX9IBrkWd12cPAWfoer/x1wyiEUwGi7cbUH0pxTGdc3g4I9EEZ/yw18Uf7dIU6vrOigBWUihOU9rtC15L9Y2CToZE1wcxtB+7Omu2n29Kg4zxdINuKmBK45e982OY/8Dz8gGkyHQDJNqhoPwpChCjzc1C/FS2jVVYrXuLR7RAsp4TFtVsESpkh+Ttw5cYnd7glMJo3ds8wvxzBjg3LWW52DaLG1y3nGgRG7fqH/o2WVLYmonBaG2gEwRsXNjaxV0gF3fHSSK0SB5wCbumxaq7kKA0262IW2eitYcF/nHMjCVjP57Z8rjDz9siOSB71t7Im6+Sy+4y7Tq5ielh34QRtR/vgfjiUjtUZQ1wJrMEZqFGEj041H3oTNSdpTL0OEA8ghLCKQ6ngUPsceetchp03iYKnLn9u7YYvgzA7Eq [...]
            },
            "metadata_fingerprint": "3KXucOXkgx4=",
            "metadata_startup_script": "#!/bin/bash\nset -e\napt-get update || { echo \"Failed to update packages\"; exit 1; }\napt-get install -y docker.io || { echo \"Failed to install Docker\"; exit 1; }\nsystemctl enable docker || { echo \"Failed to enable Docker\"; exit 1; }\nsystemctl start docker || { echo \"Failed to start Docker\"; exit 1; }\nusermod -aG docker debian || { echo \"Failed to add user to Docker group\"; exit 1; }\necho \"Startup script completed successfully\" \u003e\u003e [...]
            "name": "svelte-frontend",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.88.42.137",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
                "network_ip": "10.0.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/regions/europe-north1/subnetworks/tomorrow-app-subnetwork",
                "subnetwork_project": "idata2502-ci-cd"
              }
            ],
            "project": "idata2502-ci-cd",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/zones/europe-north1-a/instances/svelte-frontend",
            "service_account": [
              {
                "email": "terraform-service-account@idata2502-ci-cd.iam.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "frontend"
            ],
            "tags_fingerprint": "4s55Dl-6pHw=",
            "terraform_labels": {
              "app": "tomorrow",
              "environment": "development",
              "goog-terraform-provisioned": "true"
            },
            "zone": "europe-north1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.tomorrow_network",
            "google_compute_subnetwork.tomorrow_subnetwork"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "tomorrow_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": true,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
            "mtu": 0,
            "name": "tomorrow-app-network",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "4907365949746913940",
            "project": "idata2502-ci-cd",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "tomorrow_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2024-11-08T15:20:19.469-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/idata2502-ci-cd/regions/europe-north1/subnetworks/tomorrow-app-subnetwork",
            "ip_cidr_range": "10.0.0.0/24",
            "name": "tomorrow-app-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/global/networks/tomorrow-app-network",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "idata2502-ci-cd",
            "purpose": "PRIVATE",
            "region": "europe-north1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/idata2502-ci-cd/regions/europe-north1/subnetworks/tomorrow-app-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.tomorrow_network"
          ]
        }
      ]
    }
  ]
}